# dycg

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: array.rs  backend.rs  buffer.rs  error.rs  graph.rs  hardware.rs  lib.rs  node.rs  operation.rs  operator.rs  result.rs  shape.rs  value.rs
src/array/: convert_ndarray.rs  tests.rs
src/array/convert_ndarray/: tests.rs
src/hardware/: base.rs  cpu.rs  default.rs
src/node/: convert_ndarray.rs  grad_tests.rs  tests.rs
src/node/convert_ndarray/: tests.rs
src/operator/: add.rs  constant.rs  div.rs  fill.rs  mul.rs  neg.rs  sub.rs
src/shape/: tests.rs
