[package]
authors = ["Yusuke Oda <yus.takara@gmail.com>"]
documentation = "https://docs.rs/dycg"
edition = "2021"
homepage = "https://github.com/odashi/dycg"
license = "MIT/Apache-2.0"
name = "dycg"
readme = "README.md"
repository = "https://github.com/odashi/dycg"
version = "0.1.0"

description = """
A dynamic computation graph library.
"""

[dependencies]
once_cell = "1.9.0"
scoped-tls-hkt = "0.1.2"